// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Form renders Profile Form 1`] = `
<div
  className=""
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-98 MuiTypography-headline-103 MuiTypography-colorTextPrimary-120 MuiTypography-gutterBottom-115"
    >
      Edit Profile
    </h2>
    <div
      aria-describedby="email-helper-text"
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiFormLabel-filled-136 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-shrink-130 MuiInputLabel-marginDense-129"
        data-shrink={true}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-139 MuiInput-disabled-142 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-disabled-142 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={true}
          id="email"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user@email.com"
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-filled-157 MuiFormHelperText-marginDense-155"
        id="email-helper-text"
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiFormLabel-filled-136 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-shrink-130 MuiInputLabel-marginDense-129"
        data-shrink={true}
        htmlFor={undefined}
      >
        Name
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user"
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-filled-157 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiFormLabel-filled-136 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-shrink-130 MuiInputLabel-marginDense-129"
        data-shrink={true}
        htmlFor={undefined}
      >
        Description
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="desc"
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-filled-157 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <h2
      className="MuiTypography-root-98 MuiTypography-body1-107 MuiTypography-colorTextPrimary-120"
      style={
        Object {
          "color": "#E53935",
        }
      }
    >
      
    </h2>
    <button
      className="MuiButtonBase-root-185 MuiButton-root-159 MuiButton-text-161 MuiButton-outlined-167 MuiButton-sizeSmall-182"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-160"
      >
        Save Profile
      </span>
      <span
        className="MuiTouchRipple-root-188"
      />
    </button>
  </form>
</div>
`;

exports[`Profile Form renders Profile Form with isEditingUser as true 1`] = `
<div
  className=""
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-98 MuiTypography-headline-103 MuiTypography-colorTextPrimary-120 MuiTypography-gutterBottom-115"
    >
      Edit Profile
    </h2>
    <div
      aria-describedby="email-helper-text"
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiFormLabel-filled-136 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-shrink-130 MuiInputLabel-marginDense-129"
        data-shrink={true}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-139 MuiInput-disabled-142 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-disabled-142 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={true}
          id="email"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user@email.com"
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-filled-157 MuiFormHelperText-marginDense-155"
        id="email-helper-text"
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiFormLabel-filled-136 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-shrink-130 MuiInputLabel-marginDense-129"
        data-shrink={true}
        htmlFor={undefined}
      >
        Name
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user"
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-filled-157 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-123 MuiFormControl-marginDense-125"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-132 MuiFormLabel-filled-136 MuiInputLabel-root-127 MuiInputLabel-formControl-128 MuiInputLabel-animated-131 MuiInputLabel-shrink-130 MuiInputLabel-marginDense-129"
        data-shrink={true}
        htmlFor={undefined}
      >
        Description
      </label>
      <div
        className="MuiInput-root-139 MuiInput-formControl-140 MuiInput-underline-143"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-147 MuiInput-inputMarginDense-148"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="desc"
        />
      </div>
      <p
        className="MuiFormHelperText-root-152 MuiFormHelperText-filled-157 MuiFormHelperText-marginDense-155"
        id={undefined}
      >
         
      </p>
    </div>
    <h2
      className="MuiTypography-root-98 MuiTypography-body1-107 MuiTypography-colorTextPrimary-120"
      style={
        Object {
          "color": "#E53935",
        }
      }
    >
      
    </h2>
    <button
      className="MuiButtonBase-root-185 MuiButton-root-159 MuiButton-text-161 MuiButton-outlined-167 MuiButton-sizeSmall-182"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-160"
      >
        <div
          className="MuiCircularProgress-root-202 MuiCircularProgress-colorPrimary-205 MuiCircularProgress-indeterminate-204"
          role="progressbar"
          style={
            Object {
              "height": 22,
              "width": 22,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-207"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-208 MuiCircularProgress-circleIndeterminate-210"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </span>
      <span
        className="MuiTouchRipple-root-188"
      />
    </button>
  </form>
</div>
`;
